--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ sagemaker==1.45.1
 scipy==1.3.3
 semantic-version==2.5.0
 six==1.11.0
+sk-video==1.1.10
 smdebug-rulesconfig==0.1.2
 sqlparse==0.3.0
 termcolor==1.1.0
