--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,7 +1,10 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: iCardioAI/wsgi.py
-    
+  aws:elasticbeanstalk:command:
+    option_name: Timeout
+    value: 1000
+      
 container_commands:
   01_migrate:
     command: "python manage.py migrate"
