--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,7 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: iCardioAI/wsgi.py
-  aws:elasticbeanstalk:command:
+  - namespace: aws:elasticbeanstalk:command
     option_name: Timeout
     value: 1000
       
