--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ jmespath==0.9.4
 jsonschema==2.6.0
 kombu==4.6.7
 more-itertools==8.0.2
+moviepy==1.0.1
 numpy==1.17.4
 opencv-python==4.1.2.30
 pandas==0.25.3
