--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -18,19 +18,6 @@ packages:
     git: []
     python36-devel: []
     postgresql96-devel: []
-    ImageMagick: []
-    ImageMagick-devel: []
     
-commands:
-  01-wget:
-    command: "wget -O /tmp/ffmpeg.tar.xz https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-64bit-static.tar.xz"
-  02-mkdir:
-    command: "if [ ! -d /opt/ffmpeg ] ; then mkdir -p /opt/ffmpeg; fi"
-  03-tar:
-    command: "tar xvf /tmp/ffmpeg.tar.xz -C /opt/ffmpeg"
-  04-ln:
-    command: "if [[ ! -f /usr/bin/ffmpeg ]] ; then ln -sf /opt/ffmpeg/ffmpeg-3.4-64bit-static/ffmpeg /usr/bin/ffmpeg; fi"
-  05-ln:
-    command: "if [[ ! -f /usr/bin/ffprobe ]] ; then ln -sf /opt/ffmpeg/ffmpeg-3.4-64bit-static/ffprobe /usr/bin/ffprobe; fi"
-  06-pecl:
-    command: "if [ `pecl list | grep imagick` ] ; then pecl install -f imagick; fi"
+sources:
+  /usr/local/bin: https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-64bit-static.tar.xz
