--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -18,6 +18,7 @@ packages:
     git: []
     python36-devel: []
     postgresql96-devel: []
+    ImageMagick: []
     
 sources:
   /usr/local/bin: https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-64bit-static.tar.xz
