--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -20,5 +20,6 @@ packages:
     postgresql96-devel: []
     ImageMagick: []
     
-sources:
-  /usr/local/bin: https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-64bit-static.tar.xz
+commands:
+  01-install:
+    command: "wget http://ffmpeg.gusari.org/static/64bit/ffmpeg.static.64bit.latest.tar.gz -O - | tar zxf - -C /usr/bin"
