--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.15.2
 fabric==2.5.0
+ffmpeg==1.4
+ffmpeg-python==0.2.0
 future==0.16.0
 idna==2.7
 importlib-metadata==1.2.0
